<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".project531.Activity.SetNewPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="?attr/actionModeCloseDrawable"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/set_new_password_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/update_new_password_icon"
            android:layout_gravity="center"
            android:layout_marginTop="50dp" />

        <TextView
            android:id="@+id/set_new_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_credentials"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/set_new_password_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_credentials_detail"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:elevation="4dp"
                android:background="#f2f4fc"
                android:layout_marginTop="30dp"
                android:hint="@string/new_password"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="#f2f4fc"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/forget_password_icon_1"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="#f2f4fc"/>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_password"
                android:layout_marginTop="20dp"
                android:hint="Confirm Password"
                android:padding="10dp"
                android:elevation="4dp"
                android:background="#f2f4fc"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="#f2f4fc"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/forget_password_icon_1"
                app:startIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="#f2f4fc"/>


            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/set_new_password_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/confirm_password"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_orange"
                android:onClick="setNewPasswordBtn"
                android:text="Update"
                android:textSize="18sp"/>


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>



    </LinearLayout>


</ScrollView>